# EyeTrackLib

./: .gitignore  .pre-commit-config.yaml  .reuseignore  .zenodo.json  .zenodo.json.license  AUTHORS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  paper.md  pyproject.toml  test.py
calculate_streams/: README-blinks.md  README-fixations-saccades.md  __init__.py  blinks.py  saccades_and_fixations.py
tests/: test_calculate_saccades_and_fixations.py
